--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "migration:run":"prisma migrate deploy",
     "test:load-envs": "dotenv -e .env.test",
     "test": "npm run test:load-envs -- jest -- --runInBand",
-    "test:migration": "npm run test:load-env prisma migrate deploy",
-    "test:coverage": "npm run test -- --coverage"
+    "test:ci": "npm run test:integration:migration:run && npm run test",
+    "test:migration": "npm run test:load-env -- prisma migrate deploy",
+    "test:coverage": "npm run test -- --coverage",
+    "test:integration": "npm run test:load-envs -- jest tests/integration -- --runInBand",
+    "test:integration:migration:run": "npm run test:load-envs -- prisma migrate deploy"
   },
   "prisma": {
   "seed": "ts-node ./prisma/seed.ts"
